Implemented Faction Upgrades